--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2570,10 +2570,13 @@ body {
     text-align: center;
   }
 }
+.cid-qFtQXDqLSw H1 {
+  color: #007943;
+}
 .cid-qFtWeHVrGq {
-  padding-top: 105px;
-  padding-bottom: 90px;
-  background-color: #f9f9f9;
+  padding-top: 75px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
 }
 .cid-qFtWeHVrGq h3 {
   font-weight: 300;
@@ -2600,6 +2603,7 @@ body {
 }
 .cid-qFtWeHVrGq .mbr-text {
   color: #000000;
+  text-align: left;
 }
 .cid-qFtWeHVrGq .media-container-column {
   display: -webkit-flex;
@@ -2612,6 +2616,38 @@ body {
 }
 .cid-qFtWeHVrGq .mbr-section-title {
   color: #007943;
+  text-align: left;
+}
+.cid-qFtWeHVrGq .card-title,
+.cid-qFtWeHVrGq .card-img {
+  text-align: left;
+}
+.cid-qFvvcGYikA {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #efefef;
+}
+@media (min-width: 992px) {
+  .cid-qFvvcGYikA .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-qFvvcGYikA .mbr-figure {
+    padding-bottom: 3rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-qFvvcGYikA .mbr-text {
+    text-align: center;
+  }
+}
+.cid-qFvvcGYikA H1 {
+  color: #007943;
+}
+.cid-qFvvcGYikA .mbr-text,
+.cid-qFvvcGYikA .mbr-section-btn {
+  color: #000000;
 }
 .cid-qFtTzotwYN {
   padding-top: 90px;
