--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -146,17 +146,17 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus,
 .btn-primary.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
@@ -166,17 +166,17 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus,
 .btn-secondary.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
@@ -186,17 +186,17 @@ body {
 }
 .btn-info,
 .btn-info:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-info:hover,
 .btn-info:focus,
 .btn-info.focus,
 .btn-info.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-info.disabled,
 .btn-info:disabled {
@@ -206,17 +206,17 @@ body {
 }
 .btn-success,
 .btn-success:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-success:hover,
 .btn-success:focus,
 .btn-success.focus,
 .btn-success.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-success.disabled,
 .btn-success:disabled {
@@ -226,17 +226,17 @@ body {
 }
 .btn-warning,
 .btn-warning:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-warning:hover,
 .btn-warning:focus,
 .btn-warning.focus,
 .btn-warning.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-warning.disabled,
 .btn-warning:disabled {
@@ -246,17 +246,17 @@ body {
 }
 .btn-danger,
 .btn-danger:active {
-  background-color: #00afef;
-  border-color: #00afef;
-  color: #ffffff;
+  background-color: #00afef !important;
+  border-color: #00afef !important;
+  color: #ffffff !important;
 }
 .btn-danger:hover,
 .btn-danger:focus,
 .btn-danger.focus,
 .btn-danger.active {
-  color: #ffffff;
-  background-color: #0077a3;
-  border-color: #0077a3;
+  color: #ffffff !important;
+  background-color: #0077a3 !important;
+  border-color: #0077a3 !important;
 }
 .btn-danger.disabled,
 .btn-danger:disabled {
@@ -269,37 +269,37 @@ body {
 }
 .btn-white,
 .btn-white:active {
-  background-color: #ffffff;
-  border-color: #ffffff;
-  color: #ffffff;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-white:hover,
 .btn-white:focus,
 .btn-white.focus,
 .btn-white.active {
-  color: #ffffff;
-  background-color: #d4d4d4;
-  border-color: #d4d4d4;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-white.disabled,
 .btn-white:disabled {
-  color: #ffffff !important;
-  background-color: #d4d4d4 !important;
-  border-color: #d4d4d4 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-black,
 .btn-black:active {
-  background-color: #333333;
-  border-color: #333333;
-  color: #ffffff;
+  background-color: #333333 !important;
+  border-color: #333333 !important;
+  color: #ffffff !important;
 }
 .btn-black:hover,
 .btn-black:focus,
 .btn-black.focus,
 .btn-black.active {
-  color: #ffffff;
-  background-color: #0d0d0d;
-  border-color: #0d0d0d;
+  color: #ffffff !important;
+  background-color: #0d0d0d !important;
+  border-color: #0d0d0d !important;
 }
 .btn-black.disabled,
 .btn-black:disabled {
@@ -528,6 +528,10 @@ a.text-black:focus {
 }
 .alert-danger {
   background-color: #00afef;
+}
+.mbr-section-btn a.btn:not(.btn-form):hover,
+.mbr-section-btn a.btn:not(.btn-form):focus {
+  box-shadow: none !important;
 }
 .mbr-gallery-filter li.active .btn {
   background-color: #00afef;
@@ -1277,6 +1281,9 @@ html,
 body {
   height: auto;
   min-height: 100vh;
+}
+.dropup .dropdown-toggle::after {
+  display: none;
 }
 .cid-qF6gHWsjIL {
   background-image: url("../../../assets/images/dwagenciadigital.cracaodesites-1500x830.png");
