create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1672,7 +1672,7 @@ body {
 .cid-qF6dBAmJha {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #0c0b0b;
+  background-image: url("../../../assets/images/wall-1-996x330.png");
 }
 .cid-qF6dBAmJha .mbr-section-subtitle {
   text-align: center;
