--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1670,7 +1670,7 @@ body {
 .cid-qF6dBAmJha {
   padding-top: 75px;
   padding-bottom: 75px;
-  background-image: url("../../../assets/images/wall-1-996x330.png");
+  background-color: #0c0b0b;
 }
 .cid-qF6dBAmJha .mbr-section-subtitle {
   text-align: center;
