create github pages

--- a/assets/fonts/style.css
+++ b/assets/fonts/style.css
@@ -1,4 +1,5 @@
 @font-face {
-   font-family: 'PORKYS';
-   src: url('PORKYS/font.TTF');
+   font-family: 'C.A. Gatintas';
+   font-display: swap;
+   src: url('C.A. Gatintas/font.ttf');
 }
