create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1356,7 +1356,7 @@ section.lazy-placeholder:after {
   background-image: url("../../../assets/images/background-898x498.png");
 }
 .cid-s0nnn4LwfP .mbr-section-subtitle {
-  color: #c1c1c1;
+  color: #efefef;
 }
 .cid-s0nnn4LwfP .formoid {
   margin: auto;
@@ -1396,7 +1396,7 @@ section.lazy-placeholder:after {
   }
 }
 .cid-s0nnn4LwfP H2 {
-  color: #c1c1c1;
+  color: #ffd600;
 }
 .cid-s0niHySRAi {
   padding-top: 120px;
