--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1345,7 +1345,7 @@ section.lazy-placeholder:after {
 .cid-s0nnn4LwfP {
   padding-top: 105px;
   padding-bottom: 105px;
-  background-image: url("../../../assets/images/background-898x498.png");
+  background-image: url("../../../assets/images/wall-1-996x330.png");
 }
 .cid-s0nnn4LwfP .mbr-section-subtitle {
   color: #efefef;
@@ -1460,7 +1460,7 @@ section.lazy-placeholder:after {
 .cid-s0nrUx05hR {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/background2-1200x800.png");
+  background-image: url("../../../assets/images/maxresdefault21-1280x720.jpg");
 }
 @media (max-width: 767px) {
   .cid-s0nrUx05hR .media-wrap {
