--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1395,7 +1395,7 @@ section.lazy-placeholder:after {
 }
 .cid-s0niHySRAi {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 45px;
 }
 .cid-s0niHySRAi .mbr-text {
   color: #efefef;
@@ -1422,8 +1422,8 @@ section.lazy-placeholder:after {
   background-color: #232323;
 }
 .cid-s0npPCNPdp .line {
-  background-color: #4f4943;
-  color: #4f4943;
+  background-color: #232323;
+  color: #232323;
   align: center;
   height: 2px;
   margin: 0 auto;
